# qtRender

./: CMakeLists.txt  QtEvent.h  QtRendererVideo.cpp  QtRendererVideo.h  README.md  RenderMainWindow.cpp  RenderMainWindow.h  main.cpp  picture2Avi.bat
GLFun/: GlContext.cpp  GlContext.h  GlShader.cpp  GlShader.h  GlTexture2D.cpp  GlTexture2D.h  MyOpenGl.cpp  MyOpenGl.h  camera.hpp
Image/: ImageFun.cpp  ImageFun.h
QtButton/: BottomDockWidget.cpp  BottomDockWidget.h  CommnDockWidget.cpp  CommnDockWidget.h  LeftDockWidget.cpp  LeftDockWidget.h  RightDockWidget.cpp  RightDockWidget.h  colorbutton.cpp  xslider.cpp
QtOpenGlFun/: CommonGlobal.h  LightSet.cpp  LightSet.h  QtOpenglFun.cpp  QtOpenglFun.h  ShaderSet.cpp  ShaderSet.h
data/shader/: DefaultfragmentShader.frag  DefaultvertexShader.vert  DiscardVertShader.vert  DiscardfragmentShader.frag  vertexShader.vert
shader/: fragmentShader.frag  light.frag  light.vert  material.frag  material.vert  vertexShader.vert
